# asylm_game

./: .gitignore  client.py  pyproject.toml  requirements.txt
outcome_game/: __init__.py  ability_service.py  ai_service.py  arena_maps.py  arena_navigation.py  constants.py  entities.py  hit_reaction.py  hud.py  kollosios_basic_grab.py  kollosios_charge.py  last_man_standing.py  lms_audio.py  main.py  match_service.py  metal_charge_carry.py  planar_movement.py  sonic_abilities.py  survivor_death_revive.py  tails_cannon.py  topdown_actor_draw.py  x2011_grab.py  x2011_rage.py
outcome_game/character_definitions/: registry.py
outcome_game/character_definitions/executioners/: exec_2011x.py  kollosios.py
outcome_game/character_definitions/survivors/: amy.py  cream.py  eggman.py  knuckles.py  metal_sonic.py  sonic.py  tails.py
